# rust_win_etw

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-workflow.yml
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
win_etw_logger/: Cargo.toml
win_etw_logger/examples/: hello.rs
win_etw_logger/src/: lib.rs
win_etw_macros/: Cargo.toml
win_etw_macros/src/: errors.rs  lib.rs  tests.rs  well_known_types.rs
win_etw_metadata/: Cargo.toml
win_etw_metadata/src/: lib.rs
win_etw_provider/: Cargo.toml
win_etw_provider/src/: data_descriptor.rs  driver_provider.rs  guid.rs  lib.rs  provider.rs  types.rs
win_etw_tracing/: Cargo.toml
win_etw_tracing/src/: lib.rs
