[package]
name = "win_etw_logger"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
description = "A Rust log provider which forwards events to Event Tracing for Windows (ETW)."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/sivadeilra/win_etw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "^0.4", features = ["std"] }
win_etw_provider = { version = "^0.1", path = "../win_etw_provider" }
win_etw_macros = { version = "^0.1", path = "../win_etw_macros" }
win_etw_metadata = { version = "^0.1", path = "../win_etw_metadata" }
winapi = { version = "^0.3.8" }
