[package]
name = "win_etw_metadata"
version = "0.1.3"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
description = "Provides metadata definitions for the win_etw_provider and win_etw_macros crates."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/microsoft/rust_win_etw"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^2.0"

[features]
default = ["metadata_headers"]
metadata_headers = []
