[package]
name = "win_etw_provider"
version = "0.1.8"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
description = "Enables apps to report events to Event Tracing for Windows (ETW)."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/microsoft/rust_win_etw"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "^1.0"
zerocopy = { version = "0.7.32", features = ["derive"] }
win_etw_metadata = { version = "^0.1.2", path = "../win_etw_metadata" }
uuid = {version = "1", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["evntprov", "winerror", "evntrace"] }
w32-error = "^1.0"

[dev-dependencies]
atomic_lazy = { git = "https://github.com/sivadeilra/atomic_lazy" }
uuid = "1"

[features]
std = []
default = ["std"]
# dev is used only for development
dev = []
