[package]
name = "win_etw_provider"
version = "0.1.10"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2021"
description = "Enables apps to report events to Event Tracing for Windows (ETW)."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/microsoft/rust_win_etw"
readme = "../README.md"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = {version = "^1.0", default-features = false, features = ["alloc"]}
zerocopy = { version = "0.7.32", features = ["derive"] }
win_etw_metadata = { version = "^0.1.2", path = "../win_etw_metadata" }
uuid = {version = "1", optional = true}

[target.'cfg(windows)'.dependencies]
windows-core = { version = "0.58.0" }
windows = { version = "0.58.0", features = ["Win32_Foundation"] }



[dev-dependencies]
atomic_lazy = { git = "https://github.com/sivadeilra/atomic_lazy" }
uuid = "1"

[features]
std = []
default = ["no_std"]
no_std = []
# dev is used only for development
dev = []
