[package]
name = "hello_world"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_etw_macros = { version = "^0.1", path = "../../win_etw_macros" }
win_etw_provider = { version = "^0.1", path = "../../win_etw_provider" }
widestring = "^0.4"
winapi = { version = "^0.3.8", features = ["ntstatus"] }

[features]
default = []
negative_testing = []
