# This package is not published.

[package]
name = "hello_world"
version = "0.1.1"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_etw_macros = { path = "../../win_etw_macros" }
win_etw_provider = { path = "../../win_etw_provider", features = ["std"] }
widestring = "^1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
]

[features]
default = []
